--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   get: ^4.7.2
   flutter_secure_storage: ^9.2.4
+  supabase_flutter: ^2.0.0
+  encrypt: ^5.0.3
 
 dev_dependencies:
   flutter_test:
